anyway From Mac

--- a/simple_match.html
+++ b/simple_match.html
@@ -131,6 +131,9 @@
     <button class="tablinks" onclick="openTab(event, 'Tab4')">こんなスキル持ってる人いませんか</button>
     <button class="tablinks" onclick="openTab(event, 'Tab5')">タグ一括入力</button>
     <button class="tablinks" onclick="openTab(event, 'Tab6')">アプリについて</button>
+    <button class="tablinks" onclick="openTab(event, 'Tab7')">Tab7</button>
+    <button class="tablinks" onclick="openTab(event, 'Tab8')">Tab8</button>
+    <button class="tablinks" onclick="openTab(event, 'Tab9')">Tab9</button>
 </div>
 
 <div id="Tab1" class="tabcontent">
@@ -224,7 +227,9 @@
     <p>例: プログラミングはできるけどデザインできる人が欲しいコミュニティ <=> デザインできるけどプログラミングできる人が欲しいコミュニティ</p>
 </div>
 
-
+<div id="Tab7" class="tabcontent"></div>
+<div id="Tab8" class="tabcontent"></div>
+<div id="Tab9" class="tabcontent"></div>
 
 
 <div v-if="login_id_name && matched_data_ary && matched_data_ary.message[0] && matched_data_ary.message[0].user_data_id">
