--- a/simple_match.html
+++ b/simple_match.html
@@ -22,13 +22,23 @@
     <script src="./lib/qrcode.js"></script>
     <!-- <script src="./peerjs.1.5.2.min.js"></script> -->
     <style>
-    .fn_box{
-        display: flex;
-        justify-content: space-between;
-    }
-    .add_tag{}
-    .right_side_clear_filter_str{}
+.fn_box{
+    display: flex;
+    justify-content: space-between;
+}
+.add_tag{
+    /* align-self: flex-start; */
 
+}
+.right_side_clear_filter_str{
+
+
+}
+        .fn_box{
+        }
+        .clear_filter_str{
+
+        }
         .tab{
             /* width 100% かつ　子要素を均等に */
             display: flex;
@@ -133,7 +143,6 @@ header > h2{
   padding: 6px 12px;
   border: 1px solid #ccc;
   border-top: none;
-  z-index: 100;
 }
 
 
@@ -614,6 +623,9 @@ async mounted() {
     } catch (error) {
         
     }
+    // tab2を開く
+    // document.querySelector("#Tab2").click();
+
 
     // this.login_name === '' ? this.login_name = 'a' : null;
     // document.querySelector("#login").click();
