anyway From Mac

--- a/simple_match.html
+++ b/simple_match.html
@@ -379,7 +379,7 @@ header > h2{
 <div>
     <div class="fn_box">
         <div class="add_tag">
-            <input type="text" v-model="skill_str" placeholder="タグを何でも追加して">
+            <input type="text" v-model="skill_str" placeholder="SNSのIDでもスキルでも趣味でも何でも追加して">
             <button @click="fetch_add_skill_str">タグを追加</button>
         </div>
         <button @click="clear_filter_str" class="right_side_clear_filter_str">絞り込みを解除</button>
