--- a/simple_match.html
+++ b/simple_match.html
@@ -198,7 +198,7 @@ header > h2{
 <!-- header -->
 <header onclick="openTab(event, 'Tab1')">
     <h1>COONERER</h1>
-    <h2>co-op connecter ver:0.0.1.1</h2>
+    <h2>co-op connecter ver:0.0.1.2</h2>
     <!-- 検索ボックス -->
 </header>
 <input type="text" class="search" placeholder="search" v-model="search_str" @input="text_filter" @change="text_filter">
@@ -319,6 +319,10 @@ header > h2{
     ※20人参加の1時間の交流会でも全員が全員と交流できる
     ※そのコミュニティが必要とするスキルを持つ別コミュニティと接続できる
     例: プログラミングはできるけどデザインできる人が欲しいコミュニティ <=> デザインできるけどプログラミングできる人が欲しいコミュニティ</p>
+
+<!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfDhjKJkjG8rK1QH6GpAajG4D1FtTCjLu1L6v4DRbtVQEv_PA/viewform?embedded=true" width="640" height="480" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
+<!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeMwpfi8gBoVTXIpiqhUzUZAR2quE6QipA1tekXU3CpuSYDOQ/viewform?embedded=true" width="512" height="512" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeMwpfi8gBoVTXIpiqhUzUZAR2quE6QipA1tekXU3CpuSYDOQ/viewform?embedded=true" width="451" height="451" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
 
 <div id="Tab7" class="tabcontent"></div>
